Actualización de index.html y script.js

--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
             <br>
 
             <label for="apellido">Apellido:</label>
-            <input type="text" id="apellido" name="A" minlength="3" required autocomplete="off">
-            <div class="error" id="errorapellido"></div>
+            <input type="text" id="apellido" name="apellido" minlength="3" required autocomplete="off">
+            <div class="error" id="errorApellido"></div>
             <br>
 
             <label for="documento">Documento:</label>
             <input type="text" id="documento" name="documento" minlength="3" required autocomplete="off">
-            <div class="error" id="errordocumento"></div>
+            <div class="error" id="errorDocumento"></div>
             <br>
             
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required autocomplete="off">
-            <div class="error" id="erroremail"></div>
+            <div class="error" id="errorEmail"></div>
             <br>
 
             <label for="edad">Edad:</label>
             <input type="number" id="edad" name="edad" required>
-            <div class="error" id="edad"></div>
+            <div class="error" id="errorEdad"></div>
             <br>
 
             <label for="actividad">Actividad:</label>
